shooping and services new components

--- a/src/app/services/service-list/service-list.component.html
+++ b/src/app/services/service-list/service-list.component.html
@@ -2,11 +2,12 @@
   <div class="col-xs-12">
     <a class="btn btn-success">New service</a>
   </div>
+  <br>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <f0-service-item [service]="service"></f0-service-item>
+      <f0-service-item [service]="service" (click)="onSelected(service)"></f0-service-item>
     </ul>
   </div>
 </div>
