--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-md-5">
-    <f0-service-list></f0-service-list>
+    <f0-service-list (serviceSelected)="selectedService = $event"></f0-service-list>
   </div>
   <div class="col-md-7">
-    Services Detail
+
+    <f0-service-detail [selectedService]="selectedService"></f0-service-detail>
+
   </div>
 </div>
