Inserting Directive component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <f0-header></f0-header>
 <div class="container">
+<f0-directives></f0-directives>
+  <br>
 <f0-services></f0-services>
 <f0-shopping-list></f0-shopping-list>
 </div>
