highlight component adding function

--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -4,3 +4,6 @@
 <div [ngStyle]="{'background-color': 'red'}"></div>
 <hr>
 <h2>Custom Attribute</h2>
+
+<div f0Highlight> Highlight directive </div>
+<div f0Highlight highlightColor="'yellow" [defaultColor]="'blue'"> Highlight directive </div>
