--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -4,6 +4,35 @@
 <div [ngStyle]="{'background-color': 'red'}"></div>
 <hr>
 <h2>Custom Attribute</h2>
-
 <div f0Highlight> Highlight directive </div>
 <div f0Highlight highlightColor="'yellow" [defaultColor]="'blue'"> Highlight directive </div>
+<hr>
+<h1>Structural Directives</h1>
+<h2>*ngIf</h2>
+<div *ngIf="switch">Conditional Text</div>
+<template [ngIf]="switch">
+  <div>
+    Conditional Text
+  </div>
+</template>
+<button (click)="onSwitch()">Swich</button>
+<hr>
+<h1>*ngFor</h1>
+<ul>
+  <li *ngFor="let item of items; let i = index">{{item}} -- (index: {{i}})</li>
+</ul>
+<hr>
+<h2>ngSwitch</h2>
+<div [ngSwitch]="value">
+  <p *ngSwitchCase="10">Value is 10</p>
+  <p *ngSwitchCase="100">Value is 100</p>
+  <p *ngSwitchDefault>Default</p>
+</div>
+<div [ngSwitch]="value">
+  <template [ngSwitchCase]="10">Value is 10</template>
+  <template [ngSwitchCase]="100">Value is 100</template>
+  <template ngSwitchDefault>Default</template>
+</div>
+<h2>UnlessDirective</h2>
+<div *f0Unless="switch">Conditional Text Unless</div>
+<br><br><br><br><br>
