--- a/src/app/services/service-list/service-list.component.html
+++ b/src/app/services/service-list/service-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <f0-service-item [service]="service" (click)="onSelected(service)"></f0-service-item>
+      <f0-service-item *ngFor="let service of services" [service]="service" (click)="onSelected(service)"></f0-service-item>
     </ul>
   </div>
 </div>
